Now linking the pages to the current source code

--- a/gps_eph.htm
+++ b/gps_eph.htm
@@ -82,12 +82,11 @@ away,  that would lead about half a millisecond of error (the satellites move at
 about 2000 meters a second).  I'm not sure why we aren't at something close to that
 level of accuracy already. </p>
 
-<p> <b> Source code </b> will be posted on <a href="http://github.com/Bill-Gray">
-GitHub </a> at some point.  I'm trying to sort out some dependencies so the
-code will be a little less opaque,  easier to understand,  and more likely
-to cause prospective clients to say:  "Let's hire this guy!"
+<p> <b> Source code</b>,  of a somewhat rough nature at this point,  is
+now <a href="https://github.com/Bill-Gray/gps_ephem"> available at GitHub. </a>
 
-<p> <a name="gnss"> <b> 'GNSS' </b> includes GPS,  GLONASS,  Galileo,
+<p> <a name="gnss"> <b> 'GNSS' </b> (Global Navigation Satellite System)
+includes GPS,  GLONASS,  Galileo,
 QZSS,  and BeiDou satellites.  You can get positions for GPS and GLONASS
 for dates starting about a day ago and running a few days into the future (i.e.,
 predictions are available).  For Galileo,  QZSS,  and BeiDou,  this is
@@ -108,7 +107,6 @@ thoughts on using navigation satellites for timing astrometry,  and for
 providing <a href="https://www.projectpluto.com/pluto/mpecs/navst43.htm">
 some example astrometry for testing that I was getting the right answers.
 </a> </p>
-
 
 <h2> <a name="contact"> Contact info </a> </h2>
 
