--- a/gps_find.htm
+++ b/gps_find.htm
@@ -17,8 +17,11 @@ for(var i = 0; i < hashParams.length; i++){
 
 <h1> GNSS satellites available for astrometry testing </h1>
 
+<p> <a href="gps_expl.htm"> Click here for an explanation of what this page
+is and why it exists. </a> </p>
+
 <p> Use the form below to find out what <a href="#gnss"> GNSS
-satellites </a> (GPS,  Galileo,  GLONASS,  etc.) are
+satellites </a> (GPS,  Galileo,  GLONASS,  BeiDou,  JXSS) are
 observable from your MPC code at a given time. </p>
 
 <p></p><hr>
@@ -31,11 +34,14 @@ action="/cgi-bin/gps/list_gps.cgi" onreset="return confirm('Do you really want t
 
   <p> Sort order: <br>
 <input type="radio" name="sort" value="1" checked="checked"> Elongation from sun  <br>
-<input type="radio" name="sort" value="2"                  > RA         <br>
+<input type="radio" name="sort" value="2"                  > RA          <br>
+<input type="radio" name="sort" value="6"                  > Declination <br>
 <input type="radio" name="sort" value="3"                  > Altitude above horizon   <br>
 <input type="radio" name="sort" value="4"                  > GNSS designation (such as 'G20' or 'R02') <br>
 <input type="radio" name="sort" value="5"                  > International designation (such as '2000-025A' or '2006-062A') <br>
-
+<br>
+<input type="radio" name="ang_fmt" value="0" checked="checked"> RA/dec in base 60 (Babylonian) <br>
+<input type="radio" name="ang_fmt" value="1"                  > RA/dec in decimal degrees <br>
 
 <p><input value=" List GNSS satellites" type="submit"> <input value=" Reset " type="reset">
 </p><hr> </form>
@@ -100,18 +106,14 @@ now <a href="https://github.com/Bill-Gray/gps_ephem"> available at GitHub. </a>
 
 <p> <a name="gnss"> <b> 'GNSS' </b> (Global Navigation Satellite System)
 includes GPS,  GLONASS,  Galileo,
-QZSS,  and BeiDou satellites.  You can get positions for GPS and GLONASS
+QZSS,  and BeiDou satellites.  You can get precise positions for GPS and GLONASS
 for dates starting about a day ago and running a few days into the future (i.e.,
 predictions are available).  For Galileo,  QZSS,  and BeiDou,  this is
-sadly not the case.  You'll get data for them,  but only a day or so "late". </p>
+sadly not the case.  You get approximate positions for finding them,  but
+the precise positions needed to really check your timing lag by a few days. </p>
 
-<p> I realize that makes them nearly useless for testing your timing;
-obviously,  you need some advance notice as to which direction to
-point your telescope.  I'm working on this... I've inquiries into
-various places as to where predictive ephems for all satellite systems
-might be found.  If worst comes to worst,  I'll take the "day old" ephems
-and integrate them ahead to the desired times.  But I'd really rather not
-do that. </p>
+<p> I realize this is an annoyance:  you can image the objects,  but then
+have to wait a few days to actually check your timing. </p>
 
 <h2> <a name="ack"> Acknowledgments </a> </h2>
 
@@ -120,6 +122,18 @@ thoughts on using navigation satellites for timing astrometry,  and for
 providing <a href="https://www.projectpluto.com/pluto/mpecs/navst43.htm">
 some example astrometry for testing that I was getting the right answers.
 </a> </p>
+
+<h2> <a name="changes"> Change log </a> </h2>
+
+<p> (2018 Jan 1) Galileo,  BeiDou,  and JXSS navsats are now also listed,
+along with the GPS and GLONASS satellites,  even for "current" times.
+My hope is that this will provide alternative,  possibly brighter targets.
+Be warned,  though,  that there's a slight element of inconvenience to them.
+I can tell you where to look for these objects,  with an accuracy of an
+arcminute or so.  But it takes a few days before really precise positions
+are available for them.  Basically,  you can look here,  find out where
+to get these satellites,  and then check back in a few days to learn where
+they "really" were. </p>
 
 <h2> <a name="contact"> Contact info </a> </h2>
 
