HTML validator (https://validator.w3.org/) picked up unclosed tags

--- a/gps_eph.htm
+++ b/gps_eph.htm
@@ -93,7 +93,7 @@ level of accuracy already. </p>
 <p> <b> Source code</b>,  of a somewhat rough nature at this point,  is
 now <a href="https://github.com/Bill-Gray/gps_ephem"> available at GitHub. </a>
 
-<p> <a name="gnss"> <b> 'GNSS' </b> (Global Navigation Satellite System)
+<p> <a name="gnss"> <b> 'GNSS' </b> (Global Navigation Satellite System) </a>
 includes GPS,  GLONASS,  Galileo,
 QZSS,  and BeiDou satellites.  You can get precise positions for GPS and GLONASS
 for dates starting about a day ago and running a few days into the future (i.e.,
