--- a/gps_find.htm
+++ b/gps_find.htm
@@ -48,7 +48,7 @@ action="/cgi-bin/gps/list_gps.cgi" onreset="return confirm('Do you really want t
 
 <p> There are <a href="tools.htm"> several other tools for asteroid observers</a>
 on this site.  In particular,  you can <a href="gps_eph.htm"> create an ephemeris
-for a particular GNSS satellite. </p>
+for a particular GNSS satellite. </a> </p>
 
 <h2> <a name="tips"> Tips: </a> </h2>
 
@@ -104,7 +104,7 @@ level of accuracy already. </p>
 <p> <b> Source code</b>,  of a somewhat rough nature at this point,  is
 now <a href="https://github.com/Bill-Gray/gps_ephem"> available at GitHub. </a>
 
-<p> <a name="gnss"> <b> 'GNSS' </b> (Global Navigation Satellite System)
+<p> <a name="gnss"> <b> 'GNSS' </b> (Global Navigation Satellite System) </a>
 includes GPS,  GLONASS,  Galileo,
 QZSS,  and BeiDou satellites.  You can get precise positions for GPS and GLONASS
 for dates starting about a day ago and running a few days into the future (i.e.,
