Added mention that there are other GPS tools available on the site

--- a/gps_eph.htm
+++ b/gps_eph.htm
@@ -10,7 +10,7 @@
 <p> <i> <a href="#changes"> Updated 2018 Jan 1 </a> </i> </p>
 
 <p> <a href="gps_expl.htm"> Click here for an explanation of what this page
-is and why it exists. </a> </p>
+is and why it exists, </a> and for links to related tools. </p>
 
 <p> Use the form below to create ephemerides for <a href="#gnss">
 GNSS satellites </a> (GPS,  Galileo,  GLONASS,  BeiDou,  and JXSS.)
