--- a/gps_find.htm
+++ b/gps_find.htm
@@ -18,7 +18,7 @@ for(var i = 0; i < hashParams.length; i++){
 <h1> GNSS satellites available for astrometry testing </h1>
 
 <p> <a href="gps_expl.htm"> Click here for an explanation of what this page
-is and why it exists. </a> </p>
+is and why it exists, </a> and links to related tools. </p>
 
 <p> Use the form below to find out what <a href="#gnss"> GNSS
 satellites </a> (GPS,  Galileo,  GLONASS,  BeiDou,  JXSS) are
