GNSS sats move at a variety of speeds;  my original wording suggested they were all pretty close to 40 arcseconds per second,  which was a little misleading.

--- a/gps_expl.htm
+++ b/gps_expl.htm
@@ -27,9 +27,10 @@ time the image was written out to the hard disk.
 <p> About the only way to really verify that the image times are
 correct is to check them against a known object.  Global Navigation
 Satellite Systems (GNSS) provide satellites that move about 40 arcseconds
-per second.  If you image one and can measure the endpoints of its
-trail to within (say) two arcseconds,  you've basically fixed the
-time at which the image was taken to within 1/20 second.
+per second (some a bit faster or slower).  If you image one and can
+measure the endpoints of its trail to within (say) two arcseconds,
+you've basically fixed the time at which the image was taken to within
+1/20 second.
 
 <p> Positions are available for GNSS satellites from five systems:
 GPS (United States),  GLONASS (Soviet Union/Russia),  Galileo (Europe),
