--- a/gps_expl.htm
+++ b/gps_expl.htm
@@ -73,8 +73,10 @@ their scatter (standard deviation). </p>
 
 <p> <i>Usually</i>,  the tools on this site can just give you an
 accurate position for the GNSS satellites,  and you can regard that
-as the answer you'd get if your timing was good to within 1/40
-second or so.  (I'm working on improving this.)
+as the answer you'd get if your timing was good to within 1/100
+second or so,  and possibly better (ten-millisecond accuracy has
+been tested;  millisecond-level accuracy is expected,  but I haven't
+figured out a way to test it yet.)
 
 <p> Positions at that level of accuracy are
 available a few days in advance for GPS and GLONASS satellites.
@@ -92,6 +94,10 @@ from <a href="tle_info.htm"> TLEs (Two-Line Elements)</a>.  Without
 those,  we'd have no idea where to look in advance for Galileo,
 BeiDou,  or QZSS objects.  We'd know exactly where they had been,
 but not where to point our telescopes tonight.
+
+<p> Fortunately,  though,  there are plenty of GPS and GLONASS
+satellites.  You may find that limiting yourself only to those
+constellations is not,  in practice,  all that limiting.
 
 <h2> <a name="sites"> Low-precision site locations </a> </h2>
 
@@ -118,8 +124,9 @@ In particular,  Mauna Kea is not only given to low precision;  the
 position is for one telescope,  probably the IRTF.  As described at
 the above link,  one can instead use 'codes' such as Sub for Subaru,
 Ke1 and Ke2 for the two Keck telescopes,  and so on.  Positions are
-also given for scopes at Cerro Tololo,  Cerro Paranal,  and La Silla
-that would be lumped into one position by MPC. </p>
+also given for scopes at Cerro Tololo,  Cerro Paranal,  Kitt Peak,
+Haleakal&#x101;,  and La Silla that would be lumped into one position
+by MPC. </p>
 
 <p> Also,  you can <a href="#contact"> send me your latitude,  longitude,
 and altitude</a> and I'll either correct the MPC's position or add
@@ -128,19 +135,23 @@ correct data. </p>
 
 <h2> <a name="to_do"> Remaining things to do </a> </h2>
 
-<p> &bull; None of this helps with figuring out what your timing
-may have been,  say,  two years ago.  I'm thinking of providing a
-tool in which you can upload a list of images you've made over the
-years:  "I got the following RA/dec rectangle at thus-and-such time",
-repeated for each image.  The tool could then tell you in which
-images you got GNSS objects.
+<p> &bull;  I've written code to do precovery searches for GNSS
+sats:  give it a list of where you took images over the years
+("I got the following RA/dec rectangle at thus-and-such times"),
+and it will tell you where and when you got satellites.
 
-<p> The problem with this is that there are around 80 GNSS satellites,
-or about one in every 500 square degrees of sky.  If you're a big
-asteroid survey,  this ought to give you plenty of opportunities
-to spot-check your timing (i.e.,  you don't get checking on every
-image,  but enough to see night-to-night variations).  For smaller
-scale observers,  you'll just get a spot-check at larger intervals.
+<p> The problem with this is that there are currently about 80 GNSS
+satellites, or about one in every 500 square degrees of sky.  Go back
+a few years,  and it's a lot less than that.  If you're a big
+asteroid survey,  you'll still have plenty of opportunities to
+spot-check your timing (i.e.,  you don't get checking on every image,
+but enough to see night-to-night variations).  For smaller scale
+observers, you'll just get a spot-check at larger intervals.
+
+<p> One such check found <a href="https://www.projectpluto.com/temp/neat.txt">
+170 GNSS satellites found by the NEAT survey</a> between 1996 to 2002,
+and I've run similar searches for three other telescopes.  But the
+code is not particularly easy for anyone else to use at this point.
 
 <h2> <a name="contact"> Contact info </a> </h2>
 
