Slight improvement to explanation of satellite designation scheme

--- a/gps_expl.htm
+++ b/gps_expl.htm
@@ -140,8 +140,9 @@ schemes by which GNSS satellites are designated,  making it sometimes
 difficult to know about which satellite one is speaking. </p>
 
 <p> &bull; LNN - letter and two digits.  The letter will be G for
-GPS, R for GLONASS, C for BeiDou,  E for Galileo,  J for QZSS
-(Japanese system),  or I for INSS,  with other letters doubtless to
+GPS, R for the (Russian) GLONASS satellites, C for the (Chinese)
+BeiDou satellites,  E for (European) Galileo,  J for (Japanese) QZSS
+satellites,  or I for (Indian) INSS,  with other letters doubtless to
 be added as other countries put up their satellites. </p>
 
 <p> For GPS satellites,  the two digits refer to the pseudo-random
