--- a/ObsCodes.htm
+++ b/ObsCodes.htm
@@ -103,7 +103,7 @@ Code  Long.   cos      sin    Name
 100  24.13   0.462   +0.884   Ahtari
 101  36.2322 0.64403 +0.76246 Kharkov
 102  36.759530.564841+0.822468Zvenigorod
-103  14.47   0.694   +0.715   Ljubljana
+103  14.527740.695365+0.716346Ljubljana
 104  10.8042 0.71985 +0.69202 San Marcello Pistoiese
 105  37.5706 0.56403 +0.82302 Moscow
 106  14.0711 0.69662 +0.71519 Crni Vrh
@@ -203,7 +203,7 @@ Code  Long.   cos      sin    Name
 200   4.3036 0.63385 +0.77088 Beersel Hills Observatory
 201   7.6033 0.69871 +0.71332 Jonathan B. Postel Observatory
 202   5.8997 0.73137 +0.67971 Tamaris Observatoire, La Seyne sur Mer
-203   8.9964 0.70160 +0.71022 GiaGa Observatory
+203   8.9955 0.70161 +0.71021 GiaGa Observatory
 204   8.7708 0.69765 +0.71430 Schiaparelli Observatory
 205  11.2731 0.71478 +0.69703 Obs. Casalecchio di Reno, Bologna
 206  10.5667 0.4922  +0.8677  Haagaar Observatory, Eina
@@ -258,6 +258,7 @@ Code  Long.   cos      sin    Name
 255  33.186890.705965+0.705886Evpatoria
 256 280.160170.784451+0.618320Green Bank
 257 243.124610.816796+0.575252Goldstone DSS 25, Fort Irwin
+258                           Gaia
 259  19.225860.349828+0.933688EISCAT Tromso UHF
 260 149.0661 0.85560 -0.51626 Siding Spring Observatory-DSS
 261 243.140220.836325+0.546877Palomar Mountain-DSS
@@ -463,14 +464,14 @@ Code  Long.   cos      sin    Name
 492 358.47   0.605   +0.795   Mickleover
 493 357.4542 0.79753 +0.60182 Calar Alto
 494 357.8361 0.61126 +0.78879 Stakenbridge
-495 357.66   0.598   +0.800   Altrincham
+495 357.662470.597857+0.798936Altrincham
 496 358.6860 0.6311  +0.7731  Bishopstoke
-497 359.30   0.626   +0.776   Ascot-Loudwater
+497 359.294490.622323+0.780160Loudwater
 498 359.2581 0.61334 +0.78718 Earls Barton
-499 359.7924 0.62558 +0.77755 Cheam
+499 359.790780.625578+0.777562Cheam
 500   0.000000.000000 0.000000Geocentric
 501   0.3475 0.63237 +0.77208 Herstmonceux
-502   0.85   0.617   +0.783   Colchester
+502   0.847930.618111+0.783475Colchester
 503   0.0948 0.61400 +0.78667 Cambridge
 504   4.3944 0.68553 +0.72570 Le Creusot
 505   4.5639 0.6229  +0.7797  Simon Stevin
@@ -555,7 +556,7 @@ Code  Long.   cos      sin    Name
 584  30.2946 0.50213 +0.86189 Leningrad
 585  30.524620.640079+0.765763Kyiv comet station
 586   0.1423 0.73358 +0.67799 Pic du Midi
-587   9.229180.697335+0.714352Sormano
+587   9.229180.697459+0.714479Sormano
 588  11.25   0.715   +0.697   Eremo di Tizzano
 589  12.643690.738223+0.672386Santa Lucia Stroncone
 590   7.46   0.678   +0.734   Metzerlen
@@ -952,7 +953,7 @@ Code  Long.   cos      sin    Name
 981 353.3522 0.58409 +0.80898 Armagh
 982 353.6621 0.59771 +0.79904 Dunsink Observatory, Dublin
 983 353.795250.805167+0.591067San Fernando
-984 357.26   0.631   +0.774   Eastfield
+984 357.269750.631671+0.772658Eastfield
 985 357.5317 0.60801 +0.79130 Telford
 986 358.75   0.624   +0.779   Ascot
 987 355.3735 0.58658 +0.80721 Isle of Man Observatory, Foxdale
@@ -1066,7 +1067,7 @@ A94  13.4577 0.69641 +0.71526 Cormons
 A95  28.3892 0.46584 +0.88193 Taurus Hill Observatory, Varkaus
 A96  16.2867 0.66656 +0.74303 Klosterneuburg
 A97  16.4219 0.66646 +0.74308 Stammersdorf
-A98  30.2092 0.58214 +0.81040 Taurus-1 Observatory, Baran'
+A98  30.2092 0.58214 +0.81040 Observatory Mazzarot-1, Baran'
 A99  10.8589 0.69978 +0.71223 Osservatorio del Monte Baldo
 B00   2.5767 0.66289 +0.74622 Savigny-le-Temple
 B01   8.4464 0.64117 +0.76499 Taunus Observatory, Frankfurt
@@ -1171,7 +1172,7 @@ B99   0.7443 0.74413 +0.66598 Santa Coloma de Gramenet
 C00  30.5150 0.55583 +0.82853 Velikie Luki
 C01  13.922930.630265+0.773855Lohrmann-Observatorium, Triebenberg
 C02   2.5305 0.74740 +0.66218 Observatorio Royal Park
-C03  24.961560.492890+0.867187Clayhole Observatory, Jokela
+C03  24.961140.492892+0.867190Clayhole Observatory, Jokela
 C04  37.6331 0.65998 +0.74878 Kramatorsk
 C05  12.1153 0.68023 +0.73088 Konigsleiten
 C06  92.9744 0.56032 +0.82553 Krasnoyarsk
@@ -1291,6 +1292,7 @@ D33 120.6982 0.92730 +0.37308 Kenting Observatory, Checheng
 D34 120.7839 0.92796 +0.37148 Kenting Observatory, Hengchun
 D35 120.8736 0.91818 +0.39597 Lulin Observatory
 D36 120.8897 0.91801 +0.39625 Tataka, Mt. Yu-Shan National Park
+D37 120.873250.918176+0.395972Lulin Widefield Telescope, Mt. Lulin
 D39 122.049610.793971+0.605943Shandong University Observatory, Weihai
 D44 124.139280.911427+0.410157Ishigakijima Astronomical Observatory
 D53 127.4820 0.63981 +0.76600 ISON-Blagoveschensk Observatory
@@ -1439,7 +1441,7 @@ G97 250.8694 0.84965 +0.52600 Astronomical League Alpha Observatory, Portal
 G98 251.343540.815037+0.578012Calvin-Rehoboth Observatory, Rehoboth
 G99 251.8104 0.84192 +0.53835 NF Observatory, Silver City
 H00 251.6987 0.84247 +0.53746 Tyrone
-H01 252.8108 0.83047 +0.55610 Magdalena Ridge Observatory, Socorro
+H01 252.810670.830474+0.556096Magdalena Ridge Observatory, Socorro
 H02 253.3706 0.81146 +0.58309 Sulphur Flats Observatory, La Cueva
 H03 253.3553 0.81753 +0.57440 Sandia View Observatory, Rio Rancho
 H04 254.0260 0.81388 +0.57964 Santa Fe
@@ -1579,11 +1581,11 @@ I37 301.352750.825603-0.562360Astrodomi Observatory, Santa Rita
 I38 302.021410.854400-0.517885Observatorio Los Algarrobos, Salto
 I39 301.426610.823342-0.565652Observatorio Cruz del Sur, San Justo
 I40 289.260610.873472-0.485986La Silla--TRAPPIST
-I41 243.140220.836325+0.546877Palomar Mountain--PTF
+I41 243.140220.836325+0.546877Palomar Mountain--ZTF
 I42 288.9081 0.74895 +0.66041 Westport Observatory
 I43 261.902370.846901+0.530084Tarleton State University Obs., Stephenville
 I44 273.5176 0.86201 +0.50521 Northwest Florida State College, Niceville
-I45 301.4281 0.82326 -0.56577 W Crucis Astronomical Observatory, San Justo
+I45 301.4281 0.82326 -0.56577 W Crusis Astronomical Observatory, San Justo
 I46 281.6108 0.76192 +0.64558 The Cottage Observatory, Altoona
 I47 290.5503 0.81526 -0.57753 Pierre Auger Observatory, Malargue
 I48 295.6757 0.80340 -0.59348 Observatorio El Catalejo, Santa Rosa
@@ -1733,7 +1735,7 @@ J91 357.0483 0.7411  +0.6692  Alt emporda Observatory, Figueres
 J92 359.3487 0.62214 +0.78031 Beaconsfield
 J93 357.7426 0.61927 +0.78255 Mount Tuffley Observatory, Gloucester
 J94 357.7886 0.61909 +0.78270 Abbeydale
-J95 358.553000.624147+0.778709Great Shefford
+J95 358.553010.624152+0.778715Great Shefford
 J96 356.056690.735326+0.675690Observatorio de Cantabria
 J97 359.5333 0.7754  +0.6293  Alginet
 J98 359.5344 0.77275 +0.63259 Observatorio Manises
@@ -1774,7 +1776,7 @@ K34   7.7005 0.70697 +0.70492 Turin
 K35   8.163690.639883+0.765937Huenfelden
 K36   8.248870.645167+0.761522Ebersheim
 K37   8.3148 0.70738 +0.70449 Cereseto
-K38   8.5511 0.70189 +0.71002 M57 Observatory, Saltrio
+K38   8.918240.697505+0.714297M57 Observatory, Saltrio
 K39   8.955560.714080+0.697844Serra Observatory
 K40   9.0135 0.66228 +0.74685 Altdorf
 K41   8.7930 0.71113 +0.70075 Vegaquattro Astronomical Obs., Novi Ligure
@@ -1839,26 +1841,47 @@ K99  22.453500.663064+0.746102ISON-Uzhgorod Observatory
 L00  12.5375 0.74535 +0.66446 East Rome Observatory, Rome
 L01  13.749300.704742+0.707169Visnjan Observatory, Tican
 L02  20.816580.771051+0.634781NOAK Observatory, Stavraki
+L03  14.730810.671765+0.738393SGT Observatory, Gaflenz
 L04  23.596400.685544+0.725675ROASTERR-1 Observatory, Cluj-Napoca
+L05  10.0699 0.70093 +0.71089 Dridri Observatory, Franciacorta
+L06   9.254030.696280+0.715445Sormano 2 Observatory, Bellagio Via Lattea
+L07  14.564060.760166+0.647727Osservatorio Salvatore di Giacomo, Agerola
 L08  24.394470.497926+0.864325Metsahovi Optical Telescope, Metsahovi
+L09  20.809870.845559-0.532619Sutherland-LCO Aqawan A #1
+L10  22.6186 0.78943 +0.61203 Kryoneri Observatory
+L11  17.2092 0.50421 +0.86070 Sandvreten Observatory
+L12   2.677890.629068+0.774754Koksijde
 L13  25.621930.700409+0.711479Stardust Observatory, Brasov
+L14   4.922470.698669+0.713095Planetarium de Vaulx-en-Velin Observatory
 L15  25.978390.708234+0.703665St. George Observatory, Ploiesti
 L16  26.045610.705820+0.706098Stardreams Observatory, Valenii de Munte
+L17   2.7114 0.74071 +0.66964 Observatori Astronomic Albanya
 L18  26.718280.659348+0.749399QOS Observatory, Zalistci
+L19  11.152580.716257+0.695653Osservatorio Felsina AAB, Montepastore
+L20  18.320690.722441+0.689239AG_Sarajevo Observatory, Sarajevo
 L21  27.421280.720179+0.691479Ostrov Observatory, Constanta
 L22  27.669530.692963+0.718573Barlad Observatory
 L23  27.8319 0.70211 +0.70968 Schela Observatory
 L24  27.9289 0.89882 -0.43743 Gauteng
+L25  14.437390.598174+0.798700Smolecin
+L26  11.810190.743368+0.666653Sanderphil Urban Observatory, Civitavecchia
+L27   5.647040.720583+0.69119729PREMOTE Observatory, Dauban
+L28  15.463390.758034+0.650341ISON-Castelgrande Observatory
+L29  18.0169 0.91802 -0.39574 Drebach-South Observatory, Windhoek
+L30   7.514690.624126+0.778737Lohbach Observatory, Benninghofen
+L31  12.856150.632524+0.772019RaSo Observatory, Chemnitz
 L33  29.9546 0.67379 +0.73646 Ananjev
 L35  30.5086 0.64055 +0.76537 DreamSky Observatory, Lisnyky
 L50  34.0114 0.71157 +0.70039 GenShtab Observatory, Nauchnij
 L51  34.0164 0.71169 +0.70028 MARGO, Nauchnij
 L52  34.016940.711679+0.700287MASTER-Tavrida
 L71  38.5839 0.71089 +0.70101 Vedrus Observatory, Azovskaya
+L72  38.6928 0.55979 +0.82589 Melezhy Astrophoto Observatory
 L96  44.2745 0.76340 +0.64416 ISON-Byurakan Observatory
 N27  73.7253 0.57847 +0.81298 Omsk-Yogik Observatory
 N30  74.3694 0.85369 +0.51909 Zeds Astronomical Observatory, Lahore
 N42  76.971810.732126+0.679511Tien-Shan Astronomical Observatory
+N43  77.1167 0.16712 -0.98328 Plateau Observatory for Dome A, Kunlun Station
 N50  78.963830.842176+0.538692Himalayan Chandra Telescope, IAO, Hanle
 N55  80.026230.846497+0.532089Corona Borealis Observatory, Ngari
 N87  87.175030.727076+0.684720Nanshan Station, Xinjiang Observatory
@@ -1872,12 +1895,14 @@ P34 120.320310.855040+0.516826Lvye Observatory, Suzhou
 P35 120.556990.913398+0.405722Cuteip Remote Observatory, Changhua
 P36 120.626690.855207+0.516553ULTRA Observatory,Suzhou
 P40 121.539580.905916+0.422185Chinese Culture University, Taipei
+P66 127.446750.824763+0.563603Deokheung Optical Astronomy Observatory
 P73 129.0820 0.81744 +0.57412 BSH Byulsem Observatory, Busan
 P93 133.544330.823371+0.565729Space Tracking and Communications Center, JAXA
 Q11 137.520690.820236+0.570158Shinshiro
 Q19 139.4390 0.81430 +0.57852 Machida
 Q21 139.853350.804747+0.591654Southern Utsunomiya
-Q24 140.5236 0.81099 +0.58310 Katori
+Q23 140.3864 0.79654 +0.60264 Sukagawa
+Q24 140.523500.810991+0.583108Katori
 Q33 142.482780.715989+0.695814Nayoro Observatory, Hokkaido University
 Q38 143.5506 0.81654 -0.57538 Swan Hill
 Q58 149.070850.855632-0.516199Siding Spring-LCO Clamshell #1
@@ -1888,6 +1913,8 @@ Q62 149.064420.855629-0.516206iTelescope Observatory, Siding Spring
 Q63 149.070640.855632-0.516202Siding Spring-LCO A
 Q64 149.070780.855632-0.516202Siding Spring-LCO B
 Q65 149.193130.855519-0.516201Warrumbungle Observatory
+Q66 149.064250.855627-0.516205Siding Spring-Janess-G, JAXA
+Q67 149.492330.835816-0.547369JBL Observatory, Bathurst
 Q68 150.337420.832917-0.551813Blue Mountains Observatory, Leura
 Q79 152.8481 0.88871 -0.45696 Samford Valley Observatory
 Q80 153.2160 0.88762 -0.45904 Birkdale
@@ -1906,6 +1933,7 @@ U56 237.869170.795044+0.604511Palo Alto
 U57 237.841280.795776+0.603616Black Mountain Observatory, Los Altos
 U63 239.194560.681217+0.729770Burnt Tree Hill Observatory, Cle Elum
 U64 239.461510.683272+0.727821CWU-Lind Observatory, Ellensburg
+U68 240.587010.799040+0.599620JPL SynTrack Robotic Telescope, Auberry
 U69 240.5870 0.79904 +0.59962 iTelescope SRO Observatory, Auberry
 U73 241.6172 0.83164 +0.55346 Redondo Beach
 U78 242.8449 0.82758 +0.55989 Cedar Glen Observatory
@@ -1922,14 +1950,19 @@ V06 249.267450.845317+0.533211Catalina Sky Survey-Kuiper
 V07 249.1219 0.85208 +0.52234 Whipple Observatory, Mount Hopkins-PAIRITEL
 V08 249.339000.848249+0.528126Mountain Creek Ranch, Vail
 V09 249.742020.849537+0.526080Moka Observatory, Benson
+V16 251.102880.849510+0.526194Dark Sky New Mexico, Animas
+V23 252.764060.828722+0.558332FOAH Observatory, Magdalena
+V29 254.266600.840062+0.541466Tzec Maun Cloudcroft Facility
 V30 254.471050.840710+0.540313Heaven on Earth Observatory, Mayhill
 V31 254.4750 0.84061 +0.54046 Hazardous Observatory, Mayhill
+V35 255.918810.861839+0.506046Deep Sky Observatory Collaborative, Pier 5
 V36 255.617420.843042+0.536333The Ranch Observatory, Lakewood
 V37 255.984830.861053+0.507428McDonald Observatory-LCO ELP
+V38 255.984930.861051+0.507431McDonald Observatory-LCO ELP Aqawan A #1
 V59 261.0734 0.86642 +0.49781 Millwood Observatory, Comfort
 V60 261.094730.862140+0.505126Putman Mountain Observatory
 V70 263.335720.870056+0.491332Starry Night Observatory, Columbus
-V78 265.1081 0.70015 +0.71169 Spirit Marsh Observatory. Sauk Centre
+V78 265.107800.700141+0.711688Spirit Marsh Observatory. Sauk Centre
 V81 265.7604 0.80902 +0.58590 Fayetteville
 V83 266.257280.781733+0.621590Rolling Hills Observatory, Warrensburg
 V86 266.8927 0.78221 +0.62099 Rattle Snake Observatory, Sedalia
@@ -1956,7 +1989,10 @@ W66 285.053810.756278+0.652109SVH Observatory, Blairstown
 W67 285.102110.759453+0.648444Paul Robinson Observatory, Voorhees State Park
 W70 285.913860.698475+0.713264Loose Goose Observatory, Saint-Jerome
 W71 285.992970.717404+0.694456Rand II Observatory, Lake Placid
+W76 289.236950.862826-0.504288CHILESCOPE Observatory, Rio Hurtad
 W77 287.4010 0.75196 +0.65702 Skyledge Observatory, Killingworth
+W78 288.883250.739859+0.670509Clay Telescope, Harvard University
+W79 289.195350.865587-0.499763Cerro Tololo-LCO Aqawan B #1
 W80 288.7678 0.74138 +0.66885 Westwood
 W81 288.999670.724557+0.686948Nebula Knoll Observatoy, East Wakefield
 W82 288.878040.736419+0.674274Mendel Observatory, Merrimack College
@@ -1983,6 +2019,7 @@ X38 301.137110.825648-0.562299Observatorio Pueyrredon, La Lonja
 X39 301.1378 0.82615 -0.56158 Observatorio Antares, Pilar
 X50 303.824190.821025-0.568999Observatorio Astronomico de Montevideo
 X57 305.406260.903659-0.426885Polo Astronomico CMF,Foz do Iguacu
+X74 309.1506 0.92987 -0.36684 Observatorio Campo dos Amarais
 X87 312.0889 0.96218 -0.27210 Dogsheaven Observatory, Brasilia
 X88 312.491310.918012-0.395458Observatorio Adhara, Sorocaba
 Y00 315.215040.935906-0.351562SONEAR Observatory, Oliveira
@@ -1995,6 +2032,11 @@ Z21 343.488300.881468+0.471452Tenerife-LCO Aqawan A #1
 Z22 343.4894 0.88148 +0.47143 MASTER-IAC Observatory, Tenerife
 Z26 343.389690.883010+0.467899Observatorio Astronomico Arcangel, Las Zocas
 Z27 343.6998 0.87976 +0.47393 Observatorio Coralito, La Laguna
+Z33 357.673310.787438+0.6147486ROADS Observatory 2, Nerpio
+Z34 359.112330.612800+0.787622NNHS Drummonds Observatory
+Z35 358.8985 0.76788 +0.63877 OAO University Observatory Station Aras
+Z36 354.945530.805224+0.591005Cancelada
+Z37 357.804260.632788+0.771754Northolt Branch Observatory 3, Blandford Forum
 Z38 351.152940.768722+0.637456Picoto Observatory, Leiria
 Z39 346.4989 0.87535 +0.48189 Observatorio Costa Teguise
 Z40 355.5127 0.80240 +0.59482 El Manzanillo Observatory, Puerto de la Torre
@@ -2039,7 +2081,7 @@ Z78 358.324200.788031+0.613690Arroyo Observatory, Arroyo Hurtado
 Z79 357.453270.797556+0.601783Calar Alto TNO Survey
 Z80 359.628080.623054+0.779568Northolt Branch Observatory
 Z81 355.732400.802530+0.594629Observatorio Estrella de Mar
-Z82 355.9573 0.80215 +0.59514 BOOTES-2 Observatory, Algarrobo
+Z82 355.959030.802135+0.595173BOOTES-2 Observatory, Algarrobo
 Z83 356.2881 0.76033 +0.64755 Chicharronian 3C Observatory, Tres Cantos
 Z84 357.451790.797523+0.601826Calar Alto-Schmidt
 Z85 356.750280.801058+0.596932Observatorio Sierra Contraviesa
@@ -2057,5 +2099,4 @@ Z96 359.193690.747818+0.661731Observatorio Cesaraugusto
 Z97 359.416470.704568+0.707270OPERA Observatory, Saint Palais
 Z98 359.5216 0.77156 +0.63405 Observatorio TRZ, Betera
 Z99 359.978740.595468+0.800687Clixby Observatory, Cleethorpes
-KLa  10.157770.542863+0.837013Kim Lang
 </pre>
