--- a/ObsCodes.htm
+++ b/ObsCodes.htm
@@ -1,4 +1,3 @@
-<pre>
 Code  Long.   cos      sin    Name
 000   0.0000 0.62411 +0.77873 Greenwich
 001   0.1542 0.62992 +0.77411 Crowborough
@@ -134,7 +133,7 @@ Code  Long.   cos      sin    Name
 131   4.725  0.7123  +0.6996  Observatoire de l'Ardeche
 132   5.2461 0.71919 +0.69260 Bedoin
 133   5.0906 0.72819 +0.68309 Les Tardieux
-134  11.4842 0.63160 +0.77277 Groszschwabhausen
+134  11.482450.631607+0.772773Groszschwabhausen
 135  49.1210 0.56353 +0.82334 Kasan
 136  48.8156 0.56282 +0.82383 Engelhardt Observatory, Kasan
 137  34.8147 0.84821 +0.52790 Givatayim Observatory
@@ -350,7 +349,7 @@ Code  Long.   cos      sin    Name
 378 136.0142 0.82437 +0.56426 Murou
 379 137.6279 0.82300 +0.56613 Hamamatsu-Yuto
 380 137.0349 0.82190 +0.56772 Ishiki
-381 137.6283 0.81220 +0.58173 Tokyo-Kiso
+381 137.625420.812172+0.581777Tokyo-Kiso
 382 137.5553 0.80915 +0.58639 Tokyo-Norikura
 383 137.8959 0.80218 +0.59526 Chirorin
 384 138.1792 0.8219  +0.5678  Shimada
@@ -660,7 +659,7 @@ Code  Long.   cos      sin    Name
 688 248.4645 0.81938 +0.57193 Lowell Observatory, Anderson Mesa Station
 689 248.2601 0.81851 +0.57319 U.S. Naval Observatory, Flagstaff
 690 248.3367 0.81832 +0.57344 Lowell Observatory, Flagstaff
-691 248.4010 0.84951 +0.52642 Steward Observatory, Kitt Peak-Spacewatch
+691 248.399660.849466+0.526479Steward Observatory, Kitt Peak-Spacewatch
 692 249.0513 0.84679 +0.53036 Steward Observatory, Tucson
 693 249.267450.845317+0.533211Catalina Station, Tucson
 694 248.9943 0.84700 +0.53009 Tumamoc Hill, Tucson
@@ -1226,6 +1225,7 @@ C53                           NEOSSat
 C54                           New Horizons
 C55                           Kepler
 C56                           LISA-Pathfinder
+C57                           TESS
 C60   7.069260.634261+0.770545Argelander Institute for Astronomy Obs., Bonn
 C61   2.582020.658892+0.749723Chelles
 C62  11.3467 0.68967 +0.72175 Eurac Observatory, Bolzano
@@ -1870,8 +1870,11 @@ L28  15.463390.758034+0.650341ISON-Castelgrande Observatory
 L29  18.0169 0.91802 -0.39574 Drebach-South Observatory, Windhoek
 L30   7.514690.624126+0.778737Lohbach Observatory, Benninghofen
 L31  12.856150.632524+0.772019RaSo Observatory, Chemnitz
+L32  20.810440.845576-0.532593Korea Microlensing Telescope Network-SAAO
 L33  29.9546 0.67379 +0.73646 Ananjev
+L34  14.020610.789742+0.611548Galhassin Robotic Telescope, Isnello
 L35  30.5086 0.64055 +0.76537 DreamSky Observatory, Lisnyky
+L36  14.780080.645319+0.761467Ondrejov--BlueEye600 Telescope
 L50  34.0114 0.71157 +0.70039 GenShtab Observatory, Nauchnij
 L51  34.0164 0.71169 +0.70028 MARGO, Nauchnij
 L52  34.016940.711679+0.700287MASTER-Tavrida
@@ -1905,6 +1908,8 @@ Q23 140.3864 0.79654 +0.60264 Sukagawa
 Q24 140.523500.810991+0.583108Katori
 Q33 142.482780.715989+0.695814Nayoro Observatory, Hokkaido University
 Q38 143.5506 0.81654 -0.57538 Swan Hill
+Q56 148.976420.821480-0.568478Heaven's Mirror Observatory, Yass
+Q57 149.061730.855649-0.516175Korea Microlensing Telescope Network-SSO
 Q58 149.070850.855632-0.516199Siding Spring-LCO Clamshell #1
 Q59 149.070810.855626-0.516197Siding Spring-LCO Clamshell #2
 Q60 149.069000.855626-0.516198ISON-SSO Observatory, Siding Spring
@@ -1916,6 +1921,7 @@ Q65 149.193130.855519-0.516201Warrumbungle Observatory
 Q66 149.064250.855627-0.516205Siding Spring-Janess-G, JAXA
 Q67 149.492330.835816-0.547369JBL Observatory, Bathurst
 Q68 150.337420.832917-0.551813Blue Mountains Observatory, Leura
+Q69 150.449330.832777-0.551945Hazelbrook (O'Day)
 Q79 152.8481 0.88871 -0.45696 Samford Valley Observatory
 Q80 153.2160 0.88762 -0.45904 Birkdale
 R57 170.472780.720489-0.691309Aorangi Iti Observatory, Lake Tekapo
@@ -1942,6 +1948,7 @@ U80 243.6151 0.82737 +0.56004 CS3-DanHenge Observatory, Landers
 U81 243.615140.827367+0.560037CS3-Trojan Station, Landers
 U82 243.615190.827368+0.560036CS3-Palmer Divide Station, Landers
 U96 246.686000.579007+0.812698Athabasca University Geophysical Observatory
+V01 248.239110.762243+0.645493Mountainville Observatory, Alpine
 V02 248.057940.835743+0.547377Command Module, Tempe
 V03 248.3314 0.79889 +0.59979 Big Water
 V04 248.463310.819378+0.571927FRoST, Anderson Mesa
@@ -2006,6 +2013,7 @@ W89 289.195330.865589-0.499764Cerro Tololo-LCO Aqawan A #1
 W90 289.058140.732740+0.678229Phillips Exeter Academy Grainger Observatory
 W91 289.602570.910007-0.414148VHS-VISTA, Cerro Paranal
 W92 290.673570.850987-0.524150MASTER-OAFA Observatory, San Juan
+W93 289.196000.865589-0.499755Korea Microlensing Telescope Network-CTIO
 W94 291.820190.921646-0.387713AMACS1, San Pedro de Atacama
 W95 291.820120.921639-0.387712Observatorio Panameno, San Pedro de Atacama
 W96 291.820060.921637-0.387717CAO, San Pedro de Atacama (since 2013)
@@ -2032,6 +2040,7 @@ Z21 343.488300.881468+0.471452Tenerife-LCO Aqawan A #1
 Z22 343.4894 0.88148 +0.47143 MASTER-IAC Observatory, Tenerife
 Z26 343.389690.883010+0.467899Observatorio Astronomico Arcangel, Las Zocas
 Z27 343.6998 0.87976 +0.47393 Observatorio Coralito, La Laguna
+Z32 358.983720.766879+0.640130Observatorio Astrofisico de Javalambre
 Z33 357.673310.787438+0.6147486ROADS Observatory 2, Nerpio
 Z34 359.112330.612800+0.787622NNHS Drummonds Observatory
 Z35 358.8985 0.76788 +0.63877 OAO University Observatory Station Aras
@@ -2099,4 +2108,4 @@ Z96 359.193690.747818+0.661731Observatorio Cesaraugusto
 Z97 359.416470.704568+0.707270OPERA Observatory, Saint Palais
 Z98 359.5216 0.77156 +0.63405 Observatorio TRZ, Betera
 Z99 359.978740.595468+0.800687Clixby Observatory, Cleethorpes
-</pre>
+
